welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
  var c=0;
  while ((getX(), getY())!= (6, 6)){
    ecritMessage(""+c);
    if (getX()==7){
      setPos(getY()+1,6);
    } else if (getY()=0){
      setPos(0, getX()+1);
    } else {
      setPos(getX()+1, getY()+1);
    }
    c+=1;
  }
  ecritMessage();
}
